# ozone_paper

./: .gitignore  pyproject.toml
data/matching/: mls_matching.npy
data/matching_night/: apriori.npy  avks_night.npy
data/smooth/: mls_smooth_night.npy
scripts/: map_plot.py  plot.py  timeseries.py
scripts/MIRA2_O3_v_2/: MLS_O3_day_reduced.npy  MLS_O3_night_reduced.npy  MLS_with_smooth.npy  make_mira2_npy.py  make_mls_npy.py  plot_comparison.py
scripts/apriori/: alt.py  api_call.py  combine_montly_means.py  era5_apr.xml  era5_aug.xml  era5_dec.xml  era5_feb.xml  era5_jan.xml  era5_jul.xml  era5_jun.xml  era5_mar.xml  era5_may.xml  era5_nov.xml  era5_oct.xml  era5_sep.xml  era5clima.py  get_pres.py  month_means.npz  monthly_means.npy  pf.npy  plot_means.py
scripts/check_new_data/: :w  check_mira2.py
scripts/data/: MLS.O3.npy
scripts/edgefiles/: compare_different_potalt.py  find_and_parse.py
scripts/find_ret_data/: MIRA2_O3_v_1.json  MIRA2_O3_v_2.json  check_if_filename.py  check_ss.py  dts.txt  files.txt  make_dt_list.py  mls_matching_night.npy  new_file_list.txt  ret_files.txt
scripts/mean_profiles/: check_ret_covar.py  m2_v1.py  mls.npy  pgrid.npy  test.py
scripts/new_ret/: check_new_data.py  check_real_uncert.py  relative_difference.py  single_measurement_comparison.py
scripts/ozone_loss/: MLS_N2O_matched_inside.npy  MLS_O3_matched_inside.npy  include_theta.py  mira2_loss.py  mira2_potential_temperature.py  mira2_tracer.py  mls_loss.py  plot_loss.py  potential_temperature.py
scripts/timeseries/: line_plot.py  map_plot.py  mk_prid.py  plot.py  (+4 more)
(+65 files in other folders)
