[project]
name = "ozone"
version = "0.1.0"
description = "Code associated with paper <TITLE>"
readme = "README.md"
authors = [
    { name = "Richard Johansson", email = "richard.johansson@irf.se" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
]

[project.scripts]
m2 = "ozone.cli:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
